<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#fff"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="#009688">
        <RelativeLayout
            android:id="@+id/stock_add_cancel"
            android:layout_width="72dp"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close_white_18dp">
            </ImageView>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/stock_add_cancel"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:textColor="#fff"
            android:text="@string/stcok_dialog_title_add"
            />
        <RelativeLayout
            android:id="@+id/stock_add_save"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/stock_dialog_save"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_height="48dp">
        <AutoCompleteTextView
            android:id="@+id/stock_add_number"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:dropDownHeight="48dp"
            android:hint="@string/stock_number"/>
        <TextView
            android:id="@+id/stock_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="Unknown"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/stock_limit_setting"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">
        <TextView
            android:id="@+id/stock_limit_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/stock_greater_short"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/stock_limit_option"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/stock_add_price"
            android:layout_width="0dp"
            android:hint="@string/stock_limit_price"
            android:textColor="@android:color/black"
            android:layout_height="48dp"
            android:layout_weight="3"/>
    </LinearLayout>
</LinearLayout>